--- a/stone_farm/scss/partials/_global.scss
+++ b/stone_farm/scss/partials/_global.scss
@@ -1,5 +1,10 @@
 body{
 	font-size: $base-font-size;
+  @media all and (max-width: 767px) {
+    p, h2{
+        text-align: center!important;
+      }
+   }
 }
 a{
   transition: all 0.15s linear;
@@ -102,6 +107,9 @@ i {
   border-top: $b_a-arrow_white 5px solid;
   border-right: $b_a-arrow_white 5px solid;
   border-bottom: $b_a-arrow_white 5px solid;
+  @media all and (max-width: 767px) {
+    opacity: 0;
+  }
 
 }
 .left_half_circle{
@@ -118,6 +126,9 @@ i {
   border-top: $b_a-arrow_white 5px solid;
   border-left: $b_a-arrow_white 5px solid;
   border-bottom: $b_a-arrow_white 5px solid;
+  @media all and (max-width: 767px) {
+    opacity: 0;
+  }
 
 }
 .right_arrow {
@@ -130,6 +141,9 @@ i {
     z-index: 555;
     margin-top: 4em;
     margin-left: -6px;
+    @media all and (max-width: 767px) {
+      opacity: 0;
+    }
 }
 
 .left_arrow {
@@ -142,6 +156,9 @@ i {
     z-index: 555;
     margin-top: 4em;
     margin-left: 37px;
+    @media all and (max-width: 767px) {
+      opacity: 0;
+    }
 }
 
 .el67.x-frame {
