--- a/stone_farm/scss/partials/_woocommerce.scss
+++ b/stone_farm/scss/partials/_woocommerce.scss
@@ -1,7 +1,10 @@
 .color_row{
 	.woocommerce{
+		width:45%;
+		float: left;
+		margin: 0.5em;
 		ul.products{
-			max-width: 50%;
+			max-width: 100%;
 			li{
 				div.entry-featured{
 					display: inline-block;
@@ -16,6 +19,7 @@
 			}
 			li.product {
 			    float: left;
+			    width: 100%;
 			    overflow: hidden;
 			    position: relative;
 			    margin: 0 4% 4.5% 0;
@@ -36,6 +40,10 @@
 			    opacity: 1!important;
 			}
 		}
+		 @media all and (max-width: 767px) {
+		 	width:100%;
+		 	margin: 0.5em 0;
+		 }
 
 	} //End WooCommerce Wrapper
 
