--- a/stone_farm/scss/partials/_global.scss
+++ b/stone_farm/scss/partials/_global.scss
@@ -18,6 +18,10 @@ a{
     background-color: $sc_blue;
     opacity: 0.8;
 }
+
+.x-btn-widgetbar{
+  display: none!important;
+}
 //Set classes on column containing image
 .img_50-50_left{
   @include img_half;
