--- a/stone_farm/style.css
+++ b/stone_farm/style.css
@@ -38,6 +38,11 @@ a {
 }
 
 /* line 22, scss/partials/_global.scss */
+.x-btn-widgetbar {
+  display: none !important;
+}
+
+/* line 26, scss/partials/_global.scss */
 .img_50-50_left {
   margin: 0px;
   width: 100%;
@@ -50,12 +55,12 @@ a {
   opacity: 0;
 }
 @media all and (max-width: 900px) {
-  /* line 22, scss/partials/_global.scss */
+  /* line 26, scss/partials/_global.scss */
   .img_50-50_left {
     opacity: 1.0;
   }
 }
-/* line 24, scss/partials/_global.scss */
+/* line 28, scss/partials/_global.scss */
 .img_50-50_left .x-text-headline {
   position: absolute;
   top: 30%;
@@ -65,13 +70,13 @@ a {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.4) !important;
 }
-/* line 32, scss/partials/_global.scss */
+/* line 36, scss/partials/_global.scss */
 .img_50-50_left .x-text-headline h2 {
   margin: 0 !important;
   line-height: 2 !important;
 }
 
-/* line 38, scss/partials/_global.scss */
+/* line 42, scss/partials/_global.scss */
 .img_50-50_right {
   margin: 0px;
   width: 100%;
@@ -84,12 +89,12 @@ a {
   opacity: 0;
 }
 @media all and (max-width: 900px) {
-  /* line 38, scss/partials/_global.scss */
+  /* line 42, scss/partials/_global.scss */
   .img_50-50_right {
     opacity: 1.0;
   }
 }
-/* line 40, scss/partials/_global.scss */
+/* line 44, scss/partials/_global.scss */
 .img_50-50_right .x-text-headline {
   position: absolute;
   top: 30%;
@@ -99,13 +104,13 @@ a {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.4) !important;
 }
-/* line 48, scss/partials/_global.scss */
+/* line 52, scss/partials/_global.scss */
 .img_50-50_right .x-text-headline h2 {
   margin: 0 !important;
   line-height: 2 !important;
 }
 
-/* line 56, scss/partials/_global.scss */
+/* line 60, scss/partials/_global.scss */
 h1, h2, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Playfair Display", serif !important;
   font-style: normal;
@@ -113,37 +118,37 @@ h1, h2, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   text-transform: uppercase;
 }
 
-/* line 62, scss/partials/_global.scss */
+/* line 66, scss/partials/_global.scss */
 p {
   font-size: 18px !important;
   line-height: 2.2 !important;
 }
 
-/* line 66, scss/partials/_global.scss */
+/* line 70, scss/partials/_global.scss */
 .el77.x-text {
   font-size: 18px !important;
 }
 
-/* line 69, scss/partials/_global.scss */
+/* line 73, scss/partials/_global.scss */
 .white_txt {
   color: #ffffff !important;
 }
-/* line 71, scss/partials/_global.scss */
+/* line 75, scss/partials/_global.scss */
 .white_txt h1, .white_txt h2, .white_txt h3, .white_txt h4, .white_txt h5, .white_txt h6, .white_txt .h1, .white_txt .h2, .white_txt .h3, .white_txt .h4, .white_txt .h5, .white_txt .h6 {
   color: #ffffff !important;
 }
-/* line 74, scss/partials/_global.scss */
+/* line 78, scss/partials/_global.scss */
 .white_txt hr {
   color: #ffffff;
   border-color: #ffffff;
 }
 
-/* line 80, scss/partials/_global.scss */
+/* line 84, scss/partials/_global.scss */
 body.blog .x-slider-container.below {
   border-bottom: 5px solid #2d333a !important;
 }
 
-/* line 96, scss/partials/_global.scss */
+/* line 100, scss/partials/_global.scss */
 .right_half_circle {
   background: transparent;
   height: 12em;
@@ -160,13 +165,13 @@ body.blog .x-slider-container.below {
   border-bottom: rgba(255, 255, 255, 0.8) 5px solid;
 }
 @media all and (max-width: 767px) {
-  /* line 96, scss/partials/_global.scss */
+  /* line 100, scss/partials/_global.scss */
   .right_half_circle {
     opacity: 0;
   }
 }
 
-/* line 115, scss/partials/_global.scss */
+/* line 119, scss/partials/_global.scss */
 .left_half_circle {
   background: transparent;
   height: 12em;
@@ -183,13 +188,13 @@ body.blog .x-slider-container.below {
   border-bottom: rgba(255, 255, 255, 0.8) 5px solid;
 }
 @media all and (max-width: 767px) {
-  /* line 115, scss/partials/_global.scss */
+  /* line 119, scss/partials/_global.scss */
   .left_half_circle {
     opacity: 0;
   }
 }
 
-/* line 134, scss/partials/_global.scss */
+/* line 138, scss/partials/_global.scss */
 .right_arrow {
   transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
@@ -202,13 +207,13 @@ body.blog .x-slider-container.below {
   margin-left: -6px;
 }
 @media all and (max-width: 767px) {
-  /* line 134, scss/partials/_global.scss */
+  /* line 138, scss/partials/_global.scss */
   .right_arrow {
     opacity: 0;
   }
 }
 
-/* line 149, scss/partials/_global.scss */
+/* line 153, scss/partials/_global.scss */
 .left_arrow {
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
@@ -221,13 +226,13 @@ body.blog .x-slider-container.below {
   margin-left: 37px;
 }
 @media all and (max-width: 767px) {
-  /* line 149, scss/partials/_global.scss */
+  /* line 153, scss/partials/_global.scss */
   .left_arrow {
     opacity: 0;
   }
 }
 
-/* line 164, scss/partials/_global.scss */
+/* line 168, scss/partials/_global.scss */
 .el67.x-frame {
   width: 100%;
   max-width: 100% !important;
@@ -372,6 +377,27 @@ h3.color_title {
 .img_bloc img {
   width: 100%;
   height: auto;
+}
+/* line 59, scss/partials/_thin-brick-veneer.scss */
+.img_bloc a img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+/* line 68, scss/partials/_thin-brick-veneer.scss */
+.map_bloc {
+  min-height: 400px;
+}
+/* line 70, scss/partials/_thin-brick-veneer.scss */
+.map_bloc a.x-image {
+  display: block;
+}
+/* line 73, scss/partials/_thin-brick-veneer.scss */
+.map_bloc img {
+  width: 100%;
+  height: auto;
+  opacity: 0;
 }
 
 /* line 2, scss/partials/_woocommerce.scss */
